- bootstrap added - registration , login - post view - blog view

--- a/templates/registration/index.html.twig
+++ b/templates/registration/index.html.twig
@@ -3,5 +3,10 @@
 {% block title %}Hello RegistrationController!{% endblock %}
 
 {% block body %}
-    {{ form(form) }}
+    <main class="col-lg-4"></main>
+    <main class="col-lg-4">
+        {{ form(form) }}
+    </main>
+    <main class="col-lg-4"></main>
+
 {% endblock %}
