--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,53 +1,185 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css">
-        {% block stylesheets %}{% endblock %}
-    </head>
-    <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="{{ path('main') }}">Navbar</a>
-        <a class="navbar-brand" href="{{ path('app_logout') }}">Logout</a>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Simple Blog</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="robots" content="all,follow">
+    <!-- Bootstrap CSS-->
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <!-- Google fonts - Open Sans-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
+    <!-- Fancy Box-->
+    <link rel="stylesheet" href="/css/jquery.fancybox.css">
+    <!-- Animaition-->
+    <link rel="stylesheet" href="/css/animsition.min.css">
+    <!-- theme stylesheet-->
+    <link rel="stylesheet" href="/css/style.default.css" id="theme-stylesheet">
+    <!-- Custom stylesheet - for your changes-->
+    <link rel="stylesheet" href="/css/custom.css">
+    <!-- Favicon-->
+    <link rel="shortcut icon" href="/img/favicon.ico">
+    <!-- Font Awesome CDN-->
+    <!-- you can replace it by local Font Awesome-->
+    <script src="https://use.fontawesome.com/99347ac47f.js"></script>
+    <!-- Font Icons CSS-->
+    <link rel="stylesheet" href="/css/fontastic.css">
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="{{ path('home') }}">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('home', {name: 'xxx'}) }}">Link</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Dropdown
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="{{ path('home', {name: 'xxx'}) }}">Greet</a>
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
+    {% block stylesheets %}{% endblock %}
+    <!-- Tweaks for older IEs--><!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
+</head>
+<body>
+<div class="animsition">
+    <header class="header">
+        <!-- Main Navbar-->
+        <nav class="navbar navbar-toggleable-md">
+            <div class="search-area">
+                <div class="search-area-inner d-flex align-items-center justify-content-center">
+                    <div class="close-btn"><i class="icon-close"></i></div>
+                    <div class="row">
+                        <div class="col-md-8 push-md-2">
+                            <form action="#">
+                                <div class="form-group">
+                                    <input type="search" name="search" id="search"
+                                           placeholder="What are you looking for?">
+                                    <button type="submit" class="submit"><i class="icon-search-1"></i></button>
+                                </div>
+                            </form>
+                        </div>
                     </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
-                </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
-        </div>
-    </nav>
+                </div>
+            </div>
+            <div class="container">
+                <!-- Navbar Brand -->
+                <div class="navbar-header d-flex align-items-center justify-content-between">
+                    <!-- Navbar Brand --><a  href="{{ path('main') }}" class="navbar-brand animsition-link">Simple Blog</a>
+                    <!-- Toggle Button-->
+                    <button type="button" data-toggle="collapse" data-target="#navbarcollapse"
+                            aria-controls="navbarcollapse" aria-expanded="false" aria-label="Toggle navigation"
+                            class="navbar-toggler"><span></span><span></span><span></span></button>
+                </div>
+                <!-- Navbar Menu -->
+                <div id="navbarcollapse" class="collapse navbar-collapse">
+                    <ul class="navbar-nav ml-auto">
+                        <!-- Search-->
+                        <li class="nav-item"><a  href="{{ path('main') }}" class="nav-link animsition-link active">Home</a></li>
+                        <li class="nav-item"><a  href="{{ path('main') }}" class="nav-link animsition-link">Blog</a></li>
+                    </ul>
+                    <div class="navbar-text"><a href="#" class="search-btn"><i class="icon-search-1"></i></a></div>
+                    <ul class="langs navbar-text">
+
+                        {% if app.user %}
+                            <a href="{{ path('app_logout') }}">Log out</a>
+                        {% endif %}
+
+                        {% if not app.user %}
+                            <a href="{{ path('app_login') }}">Log in</a> &nbsp; &nbsp;
+                            <a href="{{ path('user_registration') }}">Register</a>
+                        {% endif %}
+
+
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
     <div class="container">
-        {% block body %}{% endblock %}
+
+        <div class="row">
+            {# ... #}
+            {% block body %}{% endblock %}
+
+        </div>
+
+
     </div>
-        {% block javascripts %}{% endblock %}
-    </body>
+    {% block javascripts %}{% endblock %}
+    <!-- Page Footer-->
+    <footer class="main-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="logo">
+                        <h6 class="text-white">Simple Blog</h6>
+                    </div>
+                    <div class="contact-details">
+                        <p>Kristinee, Harujama, Tallinn, Estonia</p>
+                        <p>Email: <a href="mailto:forhadmethun@gmail.com">forhadmethun@gmail.com</a></p>
+                        <ul class="social-menu">
+                            <li class="list-inline-item"><a href="#"><i class="fa fa-facebook"></i></a></li>
+                            <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li class="list-inline-item"><a href="#"><i class="fa fa-instagram"></i></a></li>
+                            <li class="list-inline-item"><a href="#"><i class="fa fa-behance"></i></a></li>
+                            <li class="list-inline-item"><a href="#"><i class="fa fa-pinterest"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="menus d-flex">
+                        <ul class="list-unstyled">
+                            <li><a href="#">My Account</a></li>
+                            <li><a href="#">Add Listing</a></li>
+                            <li><a href="#">Pricing</a></li>
+                            <li><a href="#">Privacy &amp; Policy</a></li>
+                        </ul>
+                        <ul class="list-unstyled">
+                            <li><a href="#">Partners</a></li>
+                            <li><a href="#">FAQ</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="latest-posts"><a href="#">
+                            <div class="post d-flex align-items-center">
+                                <div class="image"><img src="/img/small-thumbnail-1.jpg" alt="..." class="img-fluid">
+                                </div>
+                                <div class="title"><strong>Hotels for all budgets</strong><span class="date last-meta">October 26, 2016</span>
+                                </div>
+                            </div>
+                        </a><a href="#">
+                            <div class="post d-flex align-items-center">
+                                <div class="image"><img src="/img/small-thumbnail-2.jpg" alt="..." class="img-fluid">
+                                </div>
+                                <div class="title"><strong>Great street atrs in London</strong><span
+                                            class="date last-meta">October 26, 2016</span></div>
+                            </div>
+                        </a><a href="#">
+                            <div class="post d-flex align-items-center">
+                                <div class="image"><img src="/img/small-thumbnail-3.jpg" alt="..." class="img-fluid">
+                                </div>
+                                <div class="title"><strong>Best coffee shops in Sydney</strong><span
+                                            class="date last-meta">October 26, 2016</span></div>
+                            </div>
+                        </a></div>
+                </div>
+            </div>
+        </div>
+        <div class="copyrights">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <p>&copy; 2020. All rights reserved. </p>
+                    </div>
+                    <div class="col-md-6 text-right"></div>
+                </div>
+            </div>
+        </div>
+    </footer>
+</div>
+<button type="button" data-toggle="collapse" data-target="#style-switch" id="style-switch-button"
+        class="btn btn-primary btn-sm hidden-xs hidden-sm"><i class="fa fa-cog fa-2x"></i></button>
+<!-- Javascript files-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="/js/tether.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
+<script src="/js/jquery.cookie.js"></script>
+<script src="/js/jquery.fancybox.min.js"></script>
+<script src="/js/animsition.min.js"></script>
+<script src="/js/front.js"></script>
+</body>
 </html>
