--- a/templates/post/create.html.twig
+++ b/templates/post/create.html.twig
@@ -3,5 +3,10 @@
 {% block title %}Create a Post{% endblock %}
 
 {% block body %}
-    {{ form(form) }}
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
+        {{ form(form) }}
+    </div>
+    <div class="col-md-2"></div>
+
 {% endblock %}
