--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -31,9 +31,9 @@
             <header>
                 <h3 class="h6">Search the blog</h3>
             </header>
-            <form action="#" class="search-form">
+            <form id="search_form" class="search-form">
                 <div class="form-group">
-                    <input type="search" placeholder="What are you looking for?">
+                    <input type="search" name="search" placeholder="What are you looking for?">
                     <button type="submit" class="submit"><i class="icon-search"></i></button>
                 </div>
             </form>
