--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -77,9 +77,9 @@
             <header>
                 <h3 class="h6">Search the blog</h3>
             </header>
-            <form action="#" class="search-form">
+            <form action="{{ path('blog') }}" class="search-form">
                 <div class="form-group">
-                    <input type="search" placeholder="What are you looking for?">
+                    <input name="search" type="search" placeholder="What are you looking for?">
                     <button type="submit" class="submit"><i class="icon-search"></i></button>
                 </div>
             </form>
