--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -4,87 +4,93 @@
 
 {% block body %}
     {% if post %}
-    <main class="post blog-post col-lg-8">
-        <div class="container">
-            <div class="post-single">
-                <div class="post-details">
-                    <h1>{{ post.title }}</h1>
-                    <div class="post-footer d-flex align-items-center flex-column flex-sm-row"><a href="#" class="author d-flex align-items-center flex-wrap">
-                            <div class="avatar"><img src="/img/avatar-1.jpg" alt="..." class="img-fluid"></div>
-                            <div class="title"><span>{{ post.user.username }}</span></div></a>
-                        <div class="d-flex align-items-center flex-wrap">
-                            <div class="date"><i class="icon-clock"></i> {{ post.createdAt|date('Y-m-d') }}</div>
-                            <div class="views"><i class="icon-eye"></i> .</div>
-                            <div class="comments meta-last"><i class="icon-comment"></i>.</div>
+        <main class="post blog-post col-lg-8">
+            <div class="container">
+                <div class="post-single">
+                    <div class="post-details">
+                        <h1>{{ post.title }}</h1>
+                        <div class="post-footer d-flex align-items-center flex-column flex-sm-row"><a href="#"
+                                                                                                      class="author d-flex align-items-center flex-wrap">
+                                <div class="avatar"><img src="/img/avatar-1.jpg" alt="..." class="img-fluid"></div>
+                                <div class="title"><span>{{ post.user.username }}</span></div>
+                            </a>
+                            <div class="d-flex align-items-center flex-wrap">
+                                <div class="date"><i class="icon-clock"></i> {{ post.createdAt|date('Y-m-d') }}</div>
+                                <div class="views"><i class="icon-eye"></i> .</div>
+                                <div class="comments meta-last"><i class="icon-comment"></i>.</div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="post-body">
-                        {{ post.description|raw }}
-                    </div>
-                    <div class="post-tags">
-                        <a href="#" class="tag">#</a>
-                    </div>
-                    <div class="post-comments" >
-                        <header>
-                            <u><h3 class="h6">Comments<span class="no-of-comments">...</span></h3></u>
-                        </header>
-                        <div id="comments">
-                        {% for comment in post.comments %}
-                        <div class="comment">
-                            <div class="comment-header d-flex justify-content-between">
-                                <div class="user d-flex align-items-center">
-                                    <div class="image"><img src="/img/user.svg" alt="..." class="img-fluid rounded-circle"></div>
-                                    <div class="title"><strong>{{ comment.commenterName }} | {{ comment.commenterEmail }}</strong><span class="date">{{ comment.createdAt|date('m-d-Y') }}</span>
+                        <div class="post-body">
+                            {{ post.description|raw }}
+                        </div>
+                        <div class="post-tags">
+                            <a href="#" class="tag">#</a>
+                        </div>
+                        <div class="post-comments">
+                            <header>
+                                <u><h3 class="h6">Comments<span class="no-of-comments">...</span></h3></u>
+                            </header>
+                            <div id="comments">
+                                {% for comment in post.comments %}
+                                    <div class="comment">
+                                        <div class="comment-header d-flex justify-content-between">
+                                            <div class="user d-flex align-items-center">
+                                                <div class="image"><img src="/img/user.svg" alt="..."
+                                                                        class="img-fluid rounded-circle"></div>
+                                                <div class="title"><strong>{{ comment.commenterName }}
+                                                        | {{ comment.commenterEmail }}</strong><span
+                                                            class="date">{{ comment.createdAt|date('m-d-Y') }}</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="comment-body">
+                                            <p>{{ comment.commentBody }}</p>
+                                        </div>
+                                    </div>
+                                {% endfor %}
+                            </div>
+                        </div>
+                        <div class="add-comment">
+                            <header>
+                                <h3 class="h6">Leave a reply</h3>
+                            </header>
+                            <form id="comment_form" class="commenting-form">
+                                <div class="row">
+                                    <div class="form-group col-md-6">
+                                        <input type="text" name="username" id="username" placeholder="Name"
+                                               class="form-control">
+                                    </div>
+                                    <div class="form-group col-md-6">
+                                        <input type="email" name="username" id="useremail"
+                                               placeholder="Email Address (will not be published)" class="form-control">
+                                    </div>
+                                    <div class="form-group col-md-12">
+                                        <textarea name="usercomment" id="usercomment" placeholder="Type your comment"
+                                                  class="form-control"></textarea>
+                                    </div>
+                                    <div class="form-group col-md-12">
+                                        <button type="submit" class="btn submit">Submit Comment</button>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="comment-body">
-                                <p>{{ comment.commentBody }}</p>
-                            </div>
+                            </form>
                         </div>
-                        {% endfor %}
-                        </div>
-
-                    </div>
-                    <div class="add-comment">
-                        <header>
-                            <h3 class="h6">Leave a reply</h3>
-                        </header>
-                        <form id="comment_form" class="commenting-form">
-                            <div class="row">
-                                <div class="form-group col-md-6">
-                                    <input type="text" name="username" id="username" placeholder="Name" class="form-control">
-                                </div>
-                                <div class="form-group col-md-6">
-                                    <input type="email" name="username" id="useremail" placeholder="Email Address (will not be published)" class="form-control">
-                                </div>
-                                <div class="form-group col-md-12">
-                                    <textarea name="usercomment" id="usercomment" placeholder="Type your comment" class="form-control"></textarea>
-                                </div>
-                                <div class="form-group col-md-12">
-                                    <button type="submit" class="btn submit">Submit Comment</button>
-                                </div>
-                            </div>
-                        </form>
                     </div>
                 </div>
             </div>
-        </div>
-    </main>
-    <aside class="col-lg-4">
-        <!-- Widget [Search Bar Widget]-->
-        <div class="widget search">
-            <header>
-                <h3 class="h6">Search the blog</h3>
-            </header>
-            <form action="{{ path('blog') }}" class="search-form">
-                <div class="form-group">
-                    <input name="search" type="search" placeholder="What are you looking for?">
-                    <button type="submit" class="submit"><i class="icon-search"></i></button>
-                </div>
-            </form>
-        </div>
-    </aside>
+        </main>
+        <aside class="col-lg-4">
+            <div class="widget search">
+                <header>
+                    <h3 class="h6">Search the blog</h3>
+                </header>
+                <form action="{{ path('blog') }}" class="search-form">
+                    <div class="form-group">
+                        <input name="search" type="search" placeholder="Search by Title or Description">
+                        <button type="submit" class="submit"><i class="icon-search"></i></button>
+                    </div>
+                </form>
+            </div>
+        </aside>
         <script>
             post_id = {{ post.id }};
         </script>
