--- a/templates/registration/index.html.twig
+++ b/templates/registration/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello RegistrationController!{% endblock %}
+{% block title %}{% endblock %}
 
 {% block body %}
     <main class="col-lg-4"></main>
@@ -8,5 +8,4 @@
         {{ form(form) }}
     </main>
     <main class="col-lg-4"></main>
-
 {% endblock %}
